adding user picture strip layout

--- a/commons_project/commons_core/templates/appindex.html
+++ b/commons_project/commons_core/templates/appindex.html
@@ -40,13 +40,22 @@
             <div class="yui3-g">
                 <div class="yui3-u-1-4">
                     <div class="list-filters">
-                        
+                        <h3>filters:</h3>
+                        <form>
+                            <input type="checkbox" label="open source"/>open source only
+                            
+                        </form>
                     </div> <!-- end filters -->
                 </div> <!-- end filters container -->
                 <div class="yui3-u-3-4">
                     <div class="yui3-u-1">
                         <div class="sort-bar">
-                            
+                            <p>
+                            sort by:
+                            <a href="#">deployments</a>
+                            <a href="#">users</a>                          
+                            <a href="#">higest rated</a>                            
+                            </p>
                         </div>
                     </div>
                      <div class="yui3-u-1">                          
