--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -61,12 +61,12 @@
             <div class="yui3-u-1 centered">
             <ul class="yui3-g category-strip">
              
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Health</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Transit</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Governance</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Geographic</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Police</a></div></li>
-                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="#"><img src="" />Fire</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Health</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Transit</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Governance</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Geographic</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Police</a></div></li>
+                <li class="yui3-u-1-6"><div class="cat-strip-item"><a href="/apps/"><img src="" />Fire</a></div></li>
             
             </ul> 
             </div>
