--- a/commons_project/commons_core/templates/index.html
+++ b/commons_project/commons_core/templates/index.html
@@ -96,10 +96,10 @@
                                         <li class="listed-app-name"><!--<img title="app-icon" src="{{ STATIC_URL }}/img/cog.png"/>-->
                                         <h3><a href="/apps/{{ app.id }}/">{{ app.name }}</a></h3>
                                          
-                                         <!-- 
+                                          
                                          <div class="star-ratings">
                                              <div id="star-rating-{{ app.id }}"></div>
-                                         </div>  -->  
+                                         </div>  
                                         <a href="/apps/{{ app.id }}/comments"><img title="comments" src="{{ STATIC_URL }}/img/comments.png"/><span class="comments-link">read comments</span></a>
                                         </li>
                                     {% endfor %}
