--- a/commons_project/static/css/style.css
+++ b/commons_project/static/css/style.css
@@ -4,6 +4,7 @@ body {
     font-family: helvetica, arial, sans-serif;
     border: 1px solid #ddd;
     padding: 0;
+    color: #403D3E;
     }
 
 header {
@@ -31,6 +32,9 @@ h1 {
 -webkit-margin-after: 0em;
 -webkit-margin-start: 0px;
 -webkit-margin-end: 0px;
+}
+#logo a {
+    color:#403D3E;
 }
 
 h2 {
@@ -87,12 +91,12 @@ ul li {}
 
 
 a:link  {
-     
+    color:#3366aa; 
     text-decoration:none; 
 }
-a:visited           { color:black; text-decoration:none; }
-a:hover             { color:red; text-decoration:underline; }
-a:active            { color:red; text-decoration:underline; }
+a:visited           { color:#3366aa; text-decoration:none; }
+a:hover             { color:#9E0B30; text-decoration:underline; }
+a:active            { color:#9E0B30; text-decoration:underline; }
 
 h2 a:visited {
     text-decoration: none;
