--- a/commons_project/templates/nav.html
+++ b/commons_project/templates/nav.html
@@ -2,14 +2,16 @@
             <div class="yui3-u-1">
                 <div class="nav-bar">
                     <ul class="yui3-g">
-                        <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/">Home</a></div></li>
-                        <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/apps/">Apps</a></div></li>
-                        <li class="yui3-u-1-12 redd"><div class="nav-item"><a href="/j/">Cities</a></div></li>
-                        <li class="yui3-u-1-12 redd"><a href="/users/">People</a></li>
-                        <li class="yui3-u" id="rest-of-bar">
+                        <li class="yui3-u-1-12"><div class="nav-item"><a href="/">Home</a></div></li>
+                        <li class="yui3-u-1-12"><div class="nav-item"><a href="/apps/">Apps</a></div></li>
+                        <li class="yui3-u-1-12"><div class="nav-item"><a href="/j/">Cities</a></div></li>
+                        <li class="yui3-u-1-12"><a href="/users/">People</a></li>
+                        <li class="yui3-u-1-2 right">
+                            <div id="rest-of-bar">
                             <div class="nav-item" id="search-nav">
                                 <input id="search-field" type="input"/>
                                 <input class="button" type="submit" value="search"/>
+                            </div>
                             </div>
                         </li>
                     </ul>
