--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -32,7 +32,7 @@
             <div id="breadcrumbs">home > </div>
         </div>
         <div class="yui3-u-1-8">
-            <div id="share">share this!</div>
+            <div class="right">share this!</div>
         </div>
         </div>
         <div class="yui3-g">
