fixed issue with weird anchors on the lists on the app detail page

--- a/commons_project/commons_core/templates/detail.html
+++ b/commons_project/commons_core/templates/detail.html
@@ -57,13 +57,13 @@
                     <h2 class="section head">What do you want to do?</h2>
                     <ul class="actions_features">
                         <li>
-                            <img src="{{ STATIC_URL }}/img/telephone.png"/><a href="#">Ask</a>a vendor for a demo of the app
+                            <img src="{{ STATIC_URL }}/img/telephone.png"/><span><a href="#">Ask</a>a vendor for a demo of the app</span>
                         </li>
                         <li>
-                            <img src="{{ STATIC_URL }}/img/comments.png"/><a href="#">Read</a>comments about the app
+                            <img src="{{ STATIC_URL }}/img/comments.png"/><span><a href="#">Read</a>comments about the app</span>
                         </li>
                         <li>
-                            <img src="{{ STATIC_URL }}/img/package_go.png"/><a href="#">Test drive</a>the app
+                            <img src="{{ STATIC_URL }}/img/package_go.png"/><span><a href="#">Test drive</a>the app</span>
                         </li>
                     </ul>
                     
