--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -29,10 +29,10 @@
 
         <div class="yui3-g">
         <div class="yui3-u-7-8">
-            <div id="breadcrumbs">home > </div>
+            <div id="breadcrumbs"><a href="#">home</a> > </div>
         </div>
         <div class="yui3-u-1-8">
-            <div class="right">share this!</div>
+            <div class="right"><a href="#">share this!</a></div>
         </div>
         </div>
         <div class="yui3-g">
