--- a/commons_project/templates/nav.html
+++ b/commons_project/templates/nav.html
@@ -6,7 +6,7 @@
                         <li class="yui3-u-1-12"><div class="nav-item"><a href="/apps/">Apps</a></div></li>
                         <li class="yui3-u-1-12"><div class="nav-item"><a href="/j/">Cities</a></div></li>
                         <li class="yui3-u-1-12"><a href="/users/">People</a></li>
-                        <li class="yui3-u-1-2 right">
+                        <li class="yui3-u-1-2 right" id="bar-right">
                             <div id="rest-of-bar">
                             <div class="nav-item" id="search-nav">
                                 <input id="search-field" type="input"/>
