--- a/commons_project/templates/base.html
+++ b/commons_project/templates/base.html
@@ -8,7 +8,7 @@
 
  <!--       <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" /> -->
         <script src="http://yui.yahooapis.com/3.3.0/build/yui/yui-min.js"   charset="utf-8"></script>
- <!--        <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css"> -->
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css"> 
          <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssbase/base-context-min.css">
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssgrids/grids-min.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" />
